--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -1,29 +1,31 @@
-<div class="background-container">
+<div class="background-img">
+  <div class="background-container">
 
-  <form class="input-container" action="/private/create" method="post">
+    <form class="input-container" action="/private/create" method="post">
 
-    <div class="form-container">
-      <label>Name:
-        <input class="create-input" type="text" name="name" />
-      </label>
-    </div>
+      <div class="form-container">
+        <label>Name:
+          <input class="create-input" type="text" name="name" />
+        </label>
+      </div>
 
-    <div class="form-container">
-      <label>Description:
-        <input class="create-input" type="text" name="description" />
-      </label>
-    </div>
+      <div class="form-container">
+        <label>Description:
+          <input class="create-input" type="text" name="description" />
+        </label>
+      </div>
 
-    <div class="form-container">
-      <label>
-        Image Url:
-        <input class="create-input" type="text" name="image" />
-      </label>
-    </div>
-    <br />
-    <div class="sub-btn">
-      <button class="edit-btn">Create Image</button>
-    </div>
-  </form>
+      <div class="form-container">
+        <label>
+          Image Url:
+          <input class="create-input" type="text" name="image" />
+        </label>
+      </div>
+      <br />
+      <div class="sub-btn">
+        <button class="edit-btn">Create Image</button>
+      </div>
+    </form>
 
+  </div>
 </div>
