fixed signup routes  error messgae

--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -5,7 +5,7 @@
 
     <div class="signup">
 
-      <form action="/signup" method="post">
+      <form novalidate="novalidate" action="/signup" method="post">
         <input
           class="input-style"
           type="username"
@@ -29,9 +29,6 @@
         {{/if}}
       </form>
 
-      {{! <button>
-    <a href="/login">Go to log in page</a>
-  </button> }}
     </div>
 
   </div>
