fixed margins and image-detail

--- a/views/private-page/Image-detail.hbs
+++ b/views/private-page/Image-detail.hbs
@@ -4,11 +4,15 @@
 
     <div>
       {{#if imageData.image}}
-        <img src="{{imageData.image}}" alt={{imageData.name}} />
+        <img
+          class="detailed-created-img"
+          src="{{imageData.image}}"
+          alt={{imageData.name}}
+        />
       {{/if}}
-
       <div>
-        <h2><strong>Description</strong></h2>
+        <br />
+        <h4><strong>Description :</strong></h4>
         <p class="img-description">{{imageData.description}}</p>
       </div>
 
