--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,6 +1,7 @@
 {{! <h1>Hello</h1> }}
+
 <div class="background-img">
-<h2 class="title"> Welcome to your private Library</h2>
+<h2 class="title"> Welcome to your private Library !</h2>
   <div class="background-container">
     <div class="gallery-container">
 
@@ -35,6 +36,7 @@
 
       <div class="flex-container-column">
         {{! do background image in a div}}
+        <br>
         <a href="/favorites"><img
             class="img-gallery"
             src="{{favorites.0.links.0.href}}"
