--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,6 +66,13 @@ h3 {
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.542), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
+
+.detailed-created-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.542), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+}
 .img-carousel {
   width: 100%;
   height: 50%;
@@ -85,7 +92,6 @@ h3 {
 }
 
 .background-container-favorites {
-  /* align-items: center; */
   margin: 40 20 20 20px;
   padding: 5px;
   text-align: center;
@@ -142,7 +148,7 @@ h3 {
 
 .img-description {
   padding: 20px;
-  text-align: justify;
+  text-align: center;
   text-justify: auto;
 }
 
