--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -12,7 +12,7 @@
             <img class="img-day" src="{{image}}" alt={{title}} />
           </a>
         {{/if}}
-        <h3>{{description}}</h3>
+        <h4 class="img-description">{{description}}</h4>
         <button type="button" class="btn btn-outline-secondary">
           <a href="/private-library/{{_id}}">See more</a>
         </button>
