--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,6 +26,9 @@
           <img class="moon-logo" src="/images/moon2.webp" alt="moon" />Galaxy
           Space</a>
 
+        {{! add clock }}
+        <div id="clock"></div>
+
       </div>
       <div class="nav-links-container">
         <div class="container-layout">
@@ -99,6 +102,11 @@
       crossorigin="anonymous"
     ></script>
     <script src="/js/script.js"></script>
+    <script src="/js/moment.js"> </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    ></script>
+
   </body>
 
 </html>
