--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,13 +22,15 @@
 
     <nav class="layout-nav">
       <div>
-        <a href="/">
-          <img class="moon-logo" src="/images/moon2.webp" alt="moon" />Galaxy
-          Space</a>
-
+        <a class="nav-title" href="/">
+          <img
+            class="moon-logo"
+            src="/images/moon2.webp"
+            alt="moon"
+          />GalaxyScape
+        </a>
         {{! add clock }}
         <div id="clock"></div>
-
       </div>
       <div class="nav-links-container">
         <div class="container-layout">
@@ -80,6 +82,7 @@
         {{/if}}
       </div>
     </nav>
+    <br />
 
     {{{body}}}
 
