--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,7 +1,8 @@
-{{! <h1>Hello</h1> }}
 
 <div class="background-img">
-<h2 class="title"> Welcome to your private Library !</h2>
+<h1 class="profile-title"> Welcome to your profile!</h1>
+  <h2 class="title"> Your Private Library</h2>
+
   <div class="background-container">
     <div class="gallery-container">
 
@@ -18,13 +19,10 @@
         {{/if}}
         <h2>{{allImages.0.name}}</h2>
       </div>
-
-      <br />
       <button type="button" class="btn btn-outline-secondary">
         <a href="/private-library">Go to Library</a>
       </button>
-
-    </div>
+    </div> <br>
     <button type="button" class="edit-btn">
       <a href="/private/create">Create your own image</a>
     </button>
