--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -28,27 +28,27 @@
       <a href="/private/create">Create your own image</a>
     </button>
   </div>
+  {{#if firstFavorite}}
+    <h2 class="title"> Your Favorites</h2>
+    <div class="background-container">
+      <div class="gallery-container">
 
-  <h2 class="title"> Your Favorites</h2>
-  <div class="background-container">
-    <div class="gallery-container">
+        <div class="flex-container-column">
+          {{! do background image in a div}}
+          <a href="/favorites"><img
+              class="img-gallery"
+              src="{{firstFavorite.0.links.0.href}}"
+              alt=""
+            /></a>
+        </div>
+        <br />
+        <button type="button" class="btn btn-outline-secondary">
+          <a href="/favorites">Go to Library</a>
+        </button>
 
-      <div class="flex-container-column">
-        {{! do background image in a div}}
-        <a href="/favorites"><img
-            class="img-gallery"
-            src="{{firstFavorite.0.links.0.href}}"
-            alt=""
-          /></a>
       </div>
-      <br />
-      <button type="button" class="btn btn-outline-secondary">
-        <a href="/favorites">Go to Library</a>
-      </button>
-
     </div>
-  </div>
-
+  {{/if}}
   <br />
   <br />
   {{#if isAdmin}}
