fixed routes to galleries

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,9 +40,9 @@
         <div class="dropdown container-layout">
           <span>Galleries</span>
           <div class="dropdown-content">
-            <a href="/The-Sun">The Sun</a>
-            <a href="/The-Moon">The Moon</a>
-            <a href="/The-Venus">The Venus</a>
+            <a href="/sun">The Sun</a>
+            <a href="/moon">The Moon</a>
+            <a href="/venus">The Venus</a>
             <a href="/curiosity">Mars Rover</a>
 
           </div>
