--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,7 @@
 body {
   font-family: Fragile Bombers;
   margin: 0;
+  overflow-x: hidden;
   background-image: url("/images/stars-background.avif");
   color: rgb(255, 255, 255);
 }
@@ -38,7 +39,7 @@ h3 {
 .background-img {
   top: 0;
   padding: 50px;
-  height: 100hw;
+  height: 170vh;
   width: 100vw;
   background-size: cover;
   background-image: url("/images/stars.jpg");
