--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,12 +1,11 @@
-
 <div class="background-img">
-<h1 class="profile-title"> Welcome to your profile !</h1>
+<h1 class="profile-title"> Welcome to your profile  !</h1>
   <h2 class="title"> Your Private Library</h2>
 
   <div class="background-container">
     <div class="gallery-container">
 
-      <br />
+      <br /> 
       <div class="flex-container-column">
         {{#if allImages.0.image}}
           <a href="/private-library/{{allImages.0._id}}">
@@ -20,7 +19,8 @@
         <h2>{{allImages.0.name}}</h2>
       </div>
       <button type="button" class="btn btn-outline-secondary">
-        <a href="/private-library">Go to Library</a>
+        <a href="/private-library">Go to Library
+        </a>
       </button>
     </div> <br>
     <button type="button" class="edit-btn">
