fixed favorites double save

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,10 +40,10 @@
         <div class="dropdown container-layout">
           <span>Galleries</span>
           <div class="dropdown-content">
-            <a href="/sun">The Sun</a>
-            <a href="/moon">The Moon</a>
-            <a href="/venus">The Venus</a>
-            <a href="/curiosity">Mars Rover</a>
+            <a href="/sun">Sun</a>
+            <a href="/moon">Moon</a>
+            <a href="/venus">Venus</a>
+            <a href="/curiosity">Curiosity</a>
 
           </div>
         </div>
