--- a/views/venus.hbs
+++ b/views/venus.hbs
@@ -1,7 +1,6 @@
-<h1 class="title">The Venus</h1>
+<h1 class="title">Venus Image Gallery</h1>
 <div class="background-container">
   <div class="gallery-container">
-
     <div class="grid-container">
       {{#each venusPhotoData}}
         <div>
