stream line in hbs

--- a/views/picture-of-day.hbs
+++ b/views/picture-of-day.hbs
@@ -1,27 +1,21 @@
-<h2 class="title"> Old Pictures Of the day</h2>
+<h2 class="title">Pictures Of the day</h2>
 <div class="background-container">
-
   <div class="gallery-container">
-
     {{#each pictureOfTheDay}}
       <div>
-
         <img
           class="img-detail"
           src="{{url}}"
           loading="lazy"
           alt="Picture of the day"
         />
-
         <div class="text-container">
-          <h2>{{title}} <br /> {{date}}</h2>
+          <h2>{{title}}</h2>
+          <h2>{{date}}</h2>
           <h3 class="img-description">{{explanation}}</h3>
-          <button class="favorites-btn" type="submit">Add to favorites</button>
+
         </div>
       </div>
-      <br />
-      <br />
     {{/each}}
-
   </div>
 </div>
