added space on bottom and added title

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,7 @@ h3 {
   background-size: cover;
   background-image: url("/images/stars.jpg");
   z-index: -1;
+  margin-bottom: 50px;
 }
 .moon-logo {
   height: 80px;
