--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,13 +19,11 @@
   </head>
 
   <body>
-
     <nav class="layout-nav">
       <div>
         <a href="/">
           <img class="moon-logo" src="/images/moon2.webp" alt="moon" />Galaxy
           Space</a>
-
       </div>
       <div class="nav-links-container">
         <div class="container-layout">
@@ -44,7 +42,6 @@
             <a href="/moon">Moon</a>
             <a href="/venus">Venus</a>
             <a href="/curiosity">Curiosity</a>
-
           </div>
         </div>
         {{#if isLoggedIn}}
@@ -61,8 +58,6 @@
             </div>
           </div>
         {{/if}}
-
-        <!--isLoggedIn function in app.js-->
         {{#if isLoggedIn}}
           <div class="container-layout">
             <a href="/logout">Logout</a>
@@ -77,21 +72,15 @@
         {{/if}}
       </div>
     </nav>
-
     {{{body}}}
-
     <footer>
-
       <div class="footer-container">
         <a href="https://www.nasa.gov/" target="_blank">
           <img class="nasa-logo" src="/images/nasa-logo.png" alt="" /></a>
-        <h3 class="footer-text">NASA data provided by the :
-          <a href="https://api.nasa.gov/" target="_blank">NASA Open APIs</a>
-          <br />
+        <h3 class="footer-text">NASA data provided by:
+          <a href="https://api.nasa.gov/" target="_blank">NASA Open APIs</a>,
           Copyright 2023 NASA.</h3>
-
       </div>
-
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -100,5 +89,4 @@
     ></script>
     <script src="/js/script.js"></script>
   </body>
-
 </html>
