--- a/views/library.hbs
+++ b/views/library.hbs
@@ -14,14 +14,16 @@
 
 <div class="background-container">
   <div class="gallery-container">
-
     <div class="grid-container">
       {{#each randomLibrary}}
         <div>
           {{#if ../isLoggedIn}}
-          <i id="favorite-icon-{{data.0.nasa_id}}" class="bi bi-star-fill icon-white" onclick="saveFavorite(this, '{{data.0.nasa_id}}')"></i>
+            <i
+              id="favorite-icon-{{data.0.nasa_id}}"
+              class="bi bi-star-fill icon-white"
+              onclick="saveFavorite(this, '{{data.0.nasa_id}}')"
+            ></i>
           {{/if}}
-
           <a href="/library/{{data.0.nasa_id}}">
             <img
               class="img-gallery"
@@ -29,9 +31,7 @@
               alt="Picture of the day"
             />
           </a>
-
           <h3>{{data.0.title}}</h3>
-
         </div>
       {{/each}}
     </div>
