--- a/views/Auth/login.hbs
+++ b/views/Auth/login.hbs
@@ -19,7 +19,7 @@
           value=""
           placeholder="******"
         />
-        <input class="edit-btn" type="submit" value="Log in" />
+        <input class="default-btn" type="submit" value="Log in" />
         {{#if errorMessage}}
           <p class="error">{{errorMessage}}</p>
         {{/if}}
