--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -23,7 +23,7 @@
           placeholder="******"
         />
 
-        <input class="edit-btn" type="submit" value="Signup" />
+        <input class="default-btn" type="submit" value="Signup" />
         {{#if errorMessage}}
           <p class="error">{{errorMessage}}</p>
         {{/if}}
