--- a/views/library.hbs
+++ b/views/library.hbs
@@ -1,5 +1,4 @@
 <h1 class="title">Nasa Image Library</h1>
-
 <div class="search-container">
   <form class="search-form" action="/library/search" method="post">
     <input
@@ -8,7 +7,7 @@
       placeholder="Search.."
       name="keyword"
     />
-    <button class="edit-btn" type="submit">Search</button>
+    <button class="default-btn" type="submit">Search</button>
   </form>
 </div>
 
