--- a/views/private-page/edit-spaceImage.hbs
+++ b/views/private-page/edit-spaceImage.hbs
@@ -30,7 +30,7 @@
           </label></div>
 
         <div class="save-div">
-          <button class="edit-btn" type="submit">Save Updated Image</button>
+          <button class="default-btn" type="submit">Save Updated Image</button>
         </div>
 
       </form>
