--- a/views/private-page/Image-detail.hbs
+++ b/views/private-page/Image-detail.hbs
@@ -15,7 +15,7 @@
     </div>
 
     <div>
-      <button class="edit-btn">
+      <button class="default-btn">
         <a href="/private-library/edit/{{imageData._id}}">Edit Image</a></button>
 
       <div>
