--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -23,7 +23,7 @@
       </div>
       <br />
       <div class="sub-btn">
-        <button class="edit-btn">Create Image</button>
+        <button class="default-btn">Create Image</button>
       </div>
   </div>
 </div>
