--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -18,7 +18,7 @@
         </button>
         <br />
         <br />
-        <button type="button" class="edit-btn">
+        <button type="button" class="default-btn">
           <a href="/private/create">Create a new image</a>
         </button>
 
