--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -24,7 +24,7 @@
       </button>
 
     </div>
-    <button type="button" class="edit-btn">
+    <button type="button" class="default-btn">
       <a href="/private/create">Create your own image</a>
     </button>
   </div>
