--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -51,7 +51,7 @@
               <a href="/profile">Profile</a>
               <a href="/private-library">Private Library</a>
               <a href="/favorites">Favorites</a>
-              <a href="/private/create">Create new Image</a>
+              <a href="/private/create">Add new Image</a>
               {{#if isAdmin}}
                 <a class="profile-btn" href="/admin">Admin</a>
               {{/if}}
