--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,9 +1,7 @@
-{{! <h1>Hello</h1> }}
 <div class="background-img">
   <h2 class="title"> Welcome to your private Library</h2>
   <div class="background-container">
     <div class="gallery-container">
-
       <br />
       <div class="flex-container-column">
         {{#if allImages.0.image}}
@@ -17,24 +15,20 @@
         {{/if}}
         <h2>{{allImages.0.name}}</h2>
       </div>
-
       <br />
       <button type="button" class="btn btn-outline-secondary">
         <a href="/private-library">Go to Library</a>
       </button>
-
     </div>
     <button type="button" class="default-btn">
-      <a href="/private/create">Create your own image</a>
+      <a href="/private/create">Add your own image</a>
     </button>
   </div>
   {{#if firstFavorite}}
     <h2 class="title"> Your Favorites</h2>
     <div class="background-container">
       <div class="gallery-container">
-
         <div class="flex-container-column">
-          {{! do background image in a div}}
           <a href="/favorites"><img
               class="img-gallery"
               src="{{firstFavorite.0.links.0.href}}"
@@ -45,14 +39,7 @@
         <button type="button" class="btn btn-outline-secondary">
           <a href="/favorites">Go to Library</a>
         </button>
-
       </div>
     </div>
   {{/if}}
-  <br />
-  <br />
-  {{#if isAdmin}}
-    <a class="profile-btn" href="/admin">Private</a>
-  {{/if}}
-
 </div>
