--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -2,7 +2,7 @@
   <div class="flex-container-column">
     <h1 class="h1-signup">Signup</h1>
     <div class="signup">
-      <form novalidate="novalidate" action="/signup" method="post">
+      <form action="/signup" method="post">
         <input
           class="input-style"
           type="username"
