--- a/views/private-page/favorite-Imagedetail.hbs
+++ b/views/private-page/favorite-Imagedetail.hbs
@@ -11,7 +11,7 @@
       {{/if}}
       <div>
         <h2><strong>Description</strong></h2>
-        <p class="img-description">{{imageData.data.0.description}}</p>
+        <h3 class="img-description">{{imageData.data.0.description}}</h3>
       </div>
       <div>
         <form action="/favorites/{{imageData.data.0.nasa_id}}" method="post">
