--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Nasa Library</title>
+    <title>Galaxia</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,8 +22,11 @@
     <nav class="layout-nav">
       <div>
         <a href="/">
-          <img class="moon-logo" src="/images/moon2.webp" alt="moon" />Galaxy
-          Space</a>
+          <img
+            class="moon-logo"
+            src="/images/moon2.webp"
+            alt="moon"
+          />Galaxia</a>
       </div>
       <div class="nav-links-container">
         <div class="container-layout">
