change clock position

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,9 +29,12 @@
             alt="moon"
           />GalaxyScape
         </a>
-        {{! add clock }}
-        <div id="clock"></div>
       </div>
+      {{! add clock }}
+      <div id="clock">
+
+      </div>
+
       <div class="nav-links-container">
         <div class="container-layout">
           <a href="/">Home</a>
