--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Nasa Library</title>
+    <title>Galaxia</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,20 +19,22 @@
   </head>
 
   <body>
-
     <nav class="layout-nav">
       <div>
+        <a href="/">
         <a class="nav-title" href="/">
           <img
             class="moon-logo"
             src="/images/moon2.webp"
             alt="moon"
+
+          />Galaxia</a>
+
           />GalaxyScape
         </a>
       </div>
       {{! add clock }}
       <div id="clock">
-
       </div>
 
       <div class="nav-links-container">
@@ -43,16 +45,15 @@
           <a href="/library">Nasa Image Library</a>
         </div>
         <div class="container-layout">
-          <a href="/Picture-of-the-day">Old Pictures of the Day</a>
+          <a href="/picture-of-the-day">Pictures of the Day</a>
         </div>
         <div class="dropdown container-layout">
           <span>Galleries</span>
           <div class="dropdown-content">
-            <a href="/The-Sun">The Sun</a>
-            <a href="/The-Moon">The Moon</a>
-            <a href="/The-Venus">The Venus</a>
-            <a href="/curiosity">Mars Rover</a>
-
+            <a href="/sun">Sun</a>
+            <a href="/moon">Moon</a>
+            <a href="/venus">Venus</a>
+            <a href="/curiosity">Curiosity</a>
           </div>
         </div>
         {{#if isLoggedIn}}
@@ -62,15 +63,13 @@
               <a href="/profile">Profile</a>
               <a href="/private-library">Private Library</a>
               <a href="/favorites">Favorites</a>
-              <a href="/private/create">Create new Image</a>
+              <a href="/private/create">Add new Image</a>
               {{#if isAdmin}}
                 <a class="profile-btn" href="/admin">Admin</a>
               {{/if}}
             </div>
           </div>
         {{/if}}
-
-        <!--isLoggedIn function in app.js-->
         {{#if isLoggedIn}}
           <div class="container-layout">
             <a href="/logout">Logout</a>
@@ -85,22 +84,15 @@
         {{/if}}
       </div>
     </nav>
-    <br />
-
     {{{body}}}
-
     <footer>
-
       <div class="footer-container">
         <a href="https://www.nasa.gov/" target="_blank">
           <img class="nasa-logo" src="/images/nasa-logo.png" alt="" /></a>
-        <h3 class="footer-text">NASA data provided by the :
-          <a href="https://api.nasa.gov/" target="_blank">NASA Open APIs</a>
-          <br />
+        <h3 class="footer-text">NASA data provided by:
+          <a href="https://api.nasa.gov/" target="_blank">NASA Open APIs</a>,
           Copyright 2023 NASA.</h3>
-
       </div>
-
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -114,5 +106,4 @@
     ></script>
 
   </body>
-
 </html>
