--- a/views/private-page/favorite-Imagedetail.hbs
+++ b/views/private-page/favorite-Imagedetail.hbs
@@ -1,7 +1,6 @@
 <div class="background-img">
   <div class="background-container">
     <h2>{{imageData.data.0.title}}</h2>
-
     <div>
       {{#if imageData.links.0.href}}
         <img
@@ -10,10 +9,9 @@
           alt={{imageData.data.0.title}}
         />
       {{/if}}
-
       <div>
         <h2><strong>Description</strong></h2>
-        <p class="img-description">{{imageData.data.0.description}}</p>
+        <h3 class="img-description">{{imageData.data.0.description}}</h3>
       </div>
       <div>
         <form action="/favorites/{{imageData.data.0.nasa_id}}" method="post">
