--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -2,20 +2,17 @@
 <div class="background-img">
   <br><br><br><br>
   <div class="background-container">
-
     <form class="input-container" action="/private/create" method="post">
       <div class="form-container">
         <label>Name:
           <input class="create-input" type="text" name="name" />
         </label>
       </div>
-
       <div class="form-container">
         <label>Description:
           <input class="create-input" type="text" name="description" />
         </label>
       </div>
-
       <div class="form-container">
         <label>
           Image Url:
@@ -24,8 +21,8 @@
       </div>
       <br />
       <div class="sub-btn">
-        <button class="edit-btn">Create Image</button>
+        <button class="default-btn">Create Image</button>
       </div>
+    </form>
   </div>
 </div>
-    </form>
