--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -1,10 +1,11 @@
 <div class="background-img">
   <h1 class="title">This is your private Library</h1>
   <div class="background-container">
-
     <br />
     <div class="flex-container">
-
+      <button type="button" class="default-btn">
+        <a href="/private/create">Add your own image</a>
+      </button>
       {{#each allImages}}
         <h1>{{name}}</h1>
         {{#if image}}
@@ -18,12 +19,10 @@
         </button>
         <br />
         <br />
-        <button type="button" class="edit-btn">
+        <button type="button" class="default-btn">
           <a href="/private/create">Create a new image</a>
         </button>
-
       {{/each}}
-
     </div>
   </div>
 </div>
