deleted gap and title

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,8 +30,11 @@
             />Galaxia</a>
         </a>
       </div>
-      {{! add clock }}
-      <div id="clock">
+      <div>
+        <h3>Earth Time:</h3>
+        <div id="clock">
+        </div>
+
       </div>
 
       <div class="nav-links-container">
