--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,10 +1,10 @@
-<div class="background-img">
-
-  <h2 class="title"> Welcome to your private Library</h2>
+<div class="background-img">   
+  <h1 class="profile-title"> Welcome to your profile  !</h1>
   <div class="background-container">
+
     <div class="gallery-container">
       <br />
-<h1 class="profile-title"> Welcome to your profile  !</h1>
+
   <h2 class="title"> Your Private Library</h2>
   <div class="background-container">
     <div class="gallery-container">
@@ -47,11 +47,7 @@
         <button type="button" class="btn btn-outline-secondary">
           <a href="/favorites">Go to Library</a>
         </button>
-
-    </div> <br>
-    <button type="button" class="edit-btn">
-      <a href="/private/create">Create your own image</a>
-    </button>
+    </div> 
   </div>
 
   <h2 class="title"> Your Favorites</h2>
